fixed spacing/style and minor adjustments

--- a/static/style.css
+++ b/static/style.css
@@ -11,9 +11,6 @@ body {
     color: red;
     overflow: hidden;
 }
-img {
-    height: 80%;
-}
 
 .container {
     text-align: center;
@@ -37,6 +34,7 @@ img {
 .btn {
     border: 0;
     background: transparent;
+    transition: transform 80ms ease;
 }
 
 .btn:hover {
@@ -48,23 +46,45 @@ img {
     justify-content: flex-start;
 }
 
-#col1{
-    flex-shrink: 2;
+.pokemon-mini {
     display: flex;
     width: 100%;
-    height: 90%;
-    border: 0;
-    flex-direction: column;   
-    align-content: space-between;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.pokemon-mini > span {
+    text-align: left;
+    display: block;
+    width: 100%;
+}
+
+.pokemon-mini > div{
+    display: inline;
+    height: 9vh;
+    min-width: 50%;
     text-align: center;
 }
 
-#col2{
-    flex-grow: 1.5;
+.pokemon-mini > div > img {
+    height: 100%;
+    width: auto;
+}
+
+#col-1{
+    display: flex;
+    width: 21vw;
+    height: 90%;
+    border: 0;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align: center;
+    align-items: stretch;
+}
+
+#col-2{
     display: grid;
-    width: 100%;
+    width: 37vw;
     height: 90%;
     border: 0;
     grid-template-rows: 1fr 6fr 2fr;
@@ -72,22 +92,25 @@ img {
     justify-content: space-around;
 }
 
-#pokemonImage {
+#pokemon-image {
     image-rendering: pixelated;
-    height: 90%;
+    height: 60%;
+    width: auto;
 }
 
-#col3{
-    flex-shrink: 1.2;
+#col-3{
     display: grid;
-    width: 100%;
+    width: 21vw;
     height: 90%;
     grid-template-rows: 1fr 3fr 1fr 4fr;
     align-items: stretch;
 }
-#pokemonData {
+#pokemon-data {
     color: red;
 }
-#pokemonName {
+#pokemon-name {
     text-transform: capitalize;
+}
+#col-3 > div:last-child {
+    overflow-y: auto;
 }
